src/test/ui/impl-trait/explicit-generic-args-with-impl-trait/feature-gate.stderr
error[E0632]: cannot provide explicit generic arguments when `impl Trait` is used in argument position
  --> $DIR/feature-gate.rs:6:11
   |
LL |     foo::<str>("".to_string());
   |           ^^^ explicit generic argument not allowed
   |
   = note: see issue #83701 <https://github.com/rust-lang/rust/issues/83701> for more information
   = help: add `#![feature(explicit_generic_args_with_impl_trait)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0632`.
